refactoring the javascript

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     </div>
     <div class="featured section" id="projects">
         <div class="carousel">
-            <div class="carousel-inner">
+            <div id="carousel-inner">
                 <div class="carousel-item active">
                     <p>Some random text</p>
                 </div>
@@ -446,8 +446,8 @@
                     <p>random text 3</p>
                 </div>
             </div>
-            <button class="carousel-control-prev">&lt;</button>
-            <button class="carousel-control-next">&gt;</button>
+            <button id="carousel-control-prev">&lt;</button>
+            <button id="carousel-control-next">&gt;</button>
         </div>
 
     </div>
