Adding the project slider and some dummy images

--- a/index.html
+++ b/index.html
@@ -434,20 +434,18 @@
         </div>
     </div>
     <div class="featured section" id="projects">
-        <div class="carousel">
-            <div id="carousel-inner">
-                <div class="carousel-item active">
-                    <p>Some random text</p>
+            <div class="slider-wrapper">
+                <div class="slider" id="project-slider">
+                    <img id="project-1" src="assets/test-earth.jpg">
+                    <img id="project-2" src="assets/test-moon.jpg">
+                    <img id="project-3" src="assets/test-saturn.jpg">
                 </div>
-                <div class="carousel-item">
-                    <p>random text too</p>
-                </div>
-                <div class="carousel-item">
-                    <p>random text 3</p>
+                <div class="slider-nav exclude-full-width-on-mobile">
+                    <a href="#project-1"></a>
+                    <a href="#project-2"></a>
+                    <a href="#project-3"></a>
                 </div>
             </div>
-            <button id="carousel-control-prev">&lt;</button>
-            <button id="carousel-control-next">&gt;</button>
         </div>
 
     </div>
