Fixing typo in index page

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                             </div>
                             <p class="project-info">
                                 This is my compilers project that focused on 
-                                creating a programming language called JCamel.
+                                creating a programming language called JCaml.
                                 It is a functional programming language that is
                                 similar to Racket.
                             </p>
