Fixed typo in description of JCaml added a readme file

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                 similar to Racket.
                             </p>
                             <p class="project-info">
-                                The language is written in racket, C and x86 
+                                The language is written in Racket, C and x86 
                                 Assembly. This was a massive compilers project
                             </p>
                         </div>
@@ -510,7 +510,7 @@
                             <p class="project-info">
                                 It is a project that 
                                 explored Rubik's cube competitons and analyzed 
-                                which countries were performing statistically 
+                                which competitions were performing statistically 
                                 worse.
                             </p>
                         </div>
