Adjusting the name of the ASTi job

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 </div>
                 <div class="timeline-info career-info exclude-full-width-on-mobile">
                     <h3 class="timeline-event-title career-name">
-                        Computer Science Intern @ Advanced Simulation Technology Inc
+                        CS Intern @ Advanced Simulation Technology Inc
                     </h3>
                     <p class="subtitle">Herndon, VA</p>
                     <ul>
