Reducing amount of html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jaraad Kamal</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" href="assets/logo_blue.png">
-  <script src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jaraad Kamal</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="assets/logo_blue.png">
+    <script src="script.js"></script>
 </head>
 <body>
   <div class="image-container always-visible full-width screen-full-height">
@@ -65,19 +65,13 @@
                 </div>
                 <div class="grid-item">
                     <h3>Operating Systems</h3>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Linux
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Windows
                         </div>
@@ -86,100 +80,67 @@
                 </div>
                 <div class="grid-item">
                     <h3>Coding</h3>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Python
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             C/C++
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             C#
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Java
                         </div>
                         <div class="star-holder row 4-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             SQL
                         </div>
                         <div class="star-holder row 3-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Golang
                         </div>
                         <div class="star-holder row 4-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             JavaScript
                         </div>
                         <div class="star-holder row 4-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Rust
                         </div>
                         <div class="star-holder row 3-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Lisp Languages
                         </div>
                         <div class="star-holder row 4-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             x86 Assembly
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div 
-                        class="between" 
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Dart
                         </div>
@@ -188,64 +149,43 @@
                 </div>
                 <div class="grid-item">
                     <h3>Tools</h3>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Git
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Visual Studio
                         </div>
                         <div class="star-holder row 5-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Atlassian Suite
                         </div>
                         <div class="star-holder row 4-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Docker
                         </div>
                         <div class="star-holder row 3-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Jenkins
                         </div>
                         <div class="star-holder row 2-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Eclipse
                         </div>
                         <div class="star-holder row 4-star"></div>
                     </div>
-                    <div
-                        class="between"
-                        onmouseenter="highlightSkill(this)"
-                        onmouseleave="unhighlightSkill(this)">
+                    <div class="between skill">
                         <div class="skill-name">
                             Subversion
                         </div>
