Fixed a typo in the description of JCaml

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             </p>
                             <p class="project-info">
                                 The language is written in Racket, C and x86 
-                                Assembly. This was a massive compilers project
+                                Assembly. This was a massive compilers project.
                             </p>
                         </div>
                         <div class="right-half">
