--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="assets/logo_blue.png">
     <script src="script.js"></script>
+
+    <!-- For fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@500&family=Rajdhani:wght@600&family=Ubuntu&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div class="image-container always-visible full-width screen-full-height">
     <div class="overlay responsive">
-        <h1>Jaraad Kamal</h1>
+        <h1 id="my-name">Jaraad Kamal</h1>
         <p class="subtitle">Software engineer</p>
     </div>
   </div>
@@ -360,6 +366,7 @@
                     </h3>
                     <p class="subtitle">College Park, MD</p>
                     <p>Bachelor's in Computer Science</p>
+                    <p>Summa Cum Laude</p>
                 </div>
             </div>
         </div>
