Adding the star image in the assets folder and fixing a typo

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             Modified automated test scripts to use in Jenkins Pipeline
                         </li>
                         <li>
-                            Utilized Golange for developing single sign on 
+                            Utilized Golang for developing single sign on 
                             authentication with SAML
                         </li>
                         <li>
