Modifying css to be interchangable. Making auto scrolling a thing changed the assets

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
 </head>
 <body>
-  <div class="image-container always-visible full-width screen-full-height">
+  <div class="image-container always-visible full-width screen-full-height"
+    id="main-banner">
   <div class="overlay responsive">
     <h1 id="my-name">Jaraad Kamal</h1>
     <p class="subtitle">Software engineer</p>
   </div>
   </div>
-  <nav class="navbar always-visible">
+  <nav class="always-visible" id="navbar">
   <a class="nav-button" id="about-nav" 
     onclick="toggleFeatured(0)">About</a>
   <a class="nav-button resume" id="resume-nav" 
