changed the stars in the resume page to be unicode characters makes setting colors easier

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- For fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@500&family=Rajdhani:wght@600&family=Ubuntu&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@500&family=Rajdhani:wght@600&family=Ubuntu&family=Zen+Maru+Gothic:wght@900&display=swap" rel="stylesheet"> 
 
 </head>
 <body>
