changes to javascript to be indpendent of project size. some issues with the shapes in the project sizes

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
   <div class="featured section" id="projects">
       <div class="slider-wrapper">
         <div class="slider" id="project-slider">
-          <div id="project-1" class="content between">
+          <div class="content between">
             <div class="left-half">
               <h1 class="project-name">JCaml</h1>
               <div class="subheading">
@@ -410,7 +410,7 @@
               </a>
             </div>
           </div>
-          <div id="project-2" class="content between">
+          <div class="content between">
             <div class="left-half">
               <h1 class="project-name">Ant Optimization</h2>
               <div class="subheading">
@@ -440,7 +440,7 @@
               </a>
             </div>
           </div>
-          <div id="project-3" class="content between">
+          <div class="content between">
             <div class="left-half">
               <h1 class="project-name">Rubik's Analysis</h1>
               <div class="subheading">
@@ -471,7 +471,7 @@
               </a>
             </div>
           </div>
-          <div id="project-4" class="content between">
+          <div class="content between">
             <div class="left-half">
               <h1 class="project-name">Block Craft</h1>
               <div class="subheading">
@@ -507,10 +507,6 @@
           </div>
         </div>
         <div class="slider-nav exclude-full-width-on-mobile">
-          <a onclick="projectJump(0)"></a>
-          <a onclick="projectJump(1)"></a>
-          <a onclick="projectJump(2)"></a>
-          <a onclick="projectJump(3)"></a>
         </div>
         <img src="assets/back.png" id="project-prev" 
           onclick="prevProject()" 
