project-dots now work. Made the text colors variable as well

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   </div>
   <nav class="always-visible" id="navbar">
   <a class="nav-button" id="about-nav" 
-    onclick="toggleFeatured(0)">About</a>
+    onclick="toggleFeatured(ABOUT_INDEX)">About</a>
   <a class="nav-button resume" id="resume-nav" 
-    onclick="toggleFeatured(1)">Resume</a>
+    onclick="toggleFeatured(RESUME_INDEX)">Resume</a>
   <a class="nav-button projects" id="projects-nav" 
-    onclick="toggleFeatured(2)">Projects</a>
+    onclick="toggleFeatured(PROJECTS_INDEX)">Projects</a>
   </nav>
 
   <div class="featured section" id="about">
