Adding employment history for pistevo decisions

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="skill-name">
               Dart
             </div>
-            <div class="star-holder row 3-star"></div>
+            <div class="star-holder row 4-star"></div>
           </div>
         </div>
         <div class="grid-item">
@@ -171,6 +171,12 @@
           <div class="between skill">
             <div class="skill-name">
               Atlassian Suite
+            </div>
+            <div class="star-holder row 4-star"></div>
+          </div>
+          <div class="between skill">
+            <div class="skill-name">
+              Amazon Web Services
             </div>
             <div class="star-holder row 4-star"></div>
           </div>
@@ -204,6 +210,22 @@
     <div id="career">
       <div class="section-break full-width">
         <h2>Career</h2>
+      </div>
+      <div class="timeline resume-grid timeline-grid">
+        <div class="timeline-info career-info exclude-full-width-on-mobile time">
+          OCT 2023 - PRESENT
+        </div>
+        <div class="timeline-info career-info exclude-full-width-on-mobile">
+          <h3 class="timeline-event-title career-name">
+            Software Engineer @ Pistevo Decision
+          </h3>
+          <p class="subtitle">Herndon, V.A.</p>
+          <ul>
+            <li>Flutter mobile app developer</li>
+            <li>Working cross platform on Andriod iOS and Web OS</li>
+            <li>Using Google Firebase and Google Cloud technologies</li>
+          </ul>
+        </div>
       </div>
       <div class="timeline resume-grid timeline-grid">
         <div class="timeline-info career-info exclude-full-width-on-mobile time">
