Fixing typo in html Andriod -> Android

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <p class="subtitle">Herndon, V.A.</p>
           <ul>
             <li>Flutter mobile app developer</li>
-            <li>Working cross platform on Andriod iOS and Web OS</li>
+            <li>Working cross platform on Android iOS and Web OS</li>
             <li>Using Google Firebase and Google Cloud technologies</li>
           </ul>
         </div>
@@ -366,7 +366,7 @@
           <p class="subtitle">Bethesda, MD</p>
           <ul>
             <li>
-              Used Andriod Studio framework to create Mobile Apps
+              Used Android Studio framework to create Mobile Apps
             </li>
             <li>
               Programmed in Dart and used Flutter Framework
