modifying the rubiks project to link to the website tutorial instead of the code

--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
               <div class="subheading">
                 <strong>Link</strong>
                 <a 
-                  href="https://github.com/Camelot314/rubiks_analysis/"
+                  href="https://camelot314.github.io/rubiks/"
                   target="_blank">
-                  Github.com
+                  Tutorial
                 </a>
               </div>
               <p class="project-info">
@@ -486,7 +486,7 @@
             </div>
             <div class="right-half">
               <a 
-                href="https://github.com/Camelot314/rubiks_analysis/"
+                href="https://camelot314.github.io/rubiks/"
                 target="_blank">
                 <img src="assets/rubik.png" 
                   alt="picture of rubik's cube">
