--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
             </div>
             <div class="star-holder row 4-star"></div>
           </div>
+          <div class="between skill">
+            <div class="skill-name">
+              Typescript
+            </div>
+            <div class="star-holder row 3-star"></div>
+          </div>
         </div>
         <div class="grid-item">
           <h3>Tools</h3>
